--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://test_user:test_password123@mern-skeleton-cluster.yb5um0y.mongodb.net/?retryWrites=true&w=majority&appName=mern-skeleton-cluster
 JWT_SECRET=s3cr3tK3y!$trongP@ssw0rd
+PORT=5000
